--- a/ResNet50.ipynb
+++ b/ResNet50.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "//anaconda/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/home/westside/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -48,8 +48,9 @@
     "img_size = (224, 224)\n",
     "img_channels = 3\n",
     "output_size = 17\n",
-    "batch_size = 128\n",
-    "batches = 1 * 128 // batch_size"
+    "batch_size = 8\n",
+    "validation_batch = 128\n",
+    "batches = 500 * 128 // batch_size"
    ]
   },
   {
@@ -61,19 +62,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPython 3.5.2\n",
-      "IPython 5.1.0\n",
+      "CPython 3.6.1\n",
+      "IPython 5.3.0\n",
       "\n",
       "keras 2.0.5\n",
       "\n",
-      "compiler   : GCC 4.2.1 Compatible Apple LLVM 4.2 (clang-425.0.28)\n",
-      "system     : Darwin\n",
-      "release    : 16.6.0\n",
+      "compiler   : GCC 4.4.7 20120313 (Red Hat 4.4.7-1)\n",
+      "system     : Linux\n",
+      "release    : 4.8.0-56-generic\n",
       "machine    : x86_64\n",
-      "processor  : i386\n",
-      "CPU cores  : 8\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 12\n",
       "interpreter: 64bit\n",
-      "Git hash   : 724e22391b321f57298f4333b0928e6023d4849e\n"
+      "Git hash   : dc902551cc50fe56b503db12c047e0308a3ead94\n"
      ]
     }
    ],
@@ -90,21 +91,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40479/40479 [05:27<00:00, 123.48it/s]\n"
+      "100%|██████████| 40479/40479 [02:21<00:00, 286.08it/s]\n"
      ]
     }
    ],
    "source": [
-    "x_train, y_train, labels_map = get_train_matrices(\"/Users/westside/dev/python/planet-amazon-deforestation/input/train_v2.csv\", \"/Users/westside/dev/python/planet-amazon-deforestation/input/train-jpg\", img_size)\n",
+    "x_train, y_train, labels_map = get_train_matrices(\"../data/train_v2.csv\", \"../data/train-jpg\", img_size)\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size=0.2)\n",
-    "flow = ImageGenerator().get_train_generator(X_train, y_train)\n",
-    "validation_generator = ValidGenerator().get_valid_generator(X_valid, y_valid)\n",
-    "validation_steps = 1#len(y_valid) // 128 "
+    "flow = ImageGenerator().get_train_generator(X_train, y_train, batch_size=batch_size)\n",
+    "\n",
+    "validation_steps = len(y_valid) // validation_batch\n",
+    "y_valid = y_valid[:validation_steps * validation_batch]\n",
+    "X_valid = X_valid[:validation_steps * validation_batch]\n",
+    "validation_generator = ValidGenerator().get_valid_generator(X_valid, y_valid, batch_size=validation_batch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -118,25 +122,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/westside/dev/python/jupyter/amazon-planet/keras_resnet.py:41: UserWarning: Update your `Model` call to the Keras 2 API: `Model(outputs=Tensor(\"de..., inputs=Tensor(\"in...)`\n",
-      "  self.model = Model(input=self.resnet.input, output=predictions)\n"
+      "/home/westside/projects/amazon/my_custom/keras_resnet.py:41: UserWarning: Update your `Model` call to the Keras 2 API: `Model(inputs=Tensor(\"in..., outputs=Tensor(\"de...)`\n",
+      "  self.model = Model(input=self.resnet.input, output=predictions)\n",
+      "/home/westside/projects/amazon/my_custom/keras_resnet.py:59: UserWarning: Update your `fit_generator` call to the Keras 2 API: `fit_generator(<keras.pre..., steps_per_epoch=8000, callbacks=[<keras_re..., validation_data=<keras.pre..., validation_steps=63, epochs=10)`\n",
+      "  validation_data=validation_data, validation_steps=validation_steps)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "2181/8000 [=======>......................] - ETA: 340s - loss: 0.2016 - acc: 0.9244"
      ]
     }
    ],
    "source": [
     "model = ResnetModel(output_size=output_size)\n",
-    "pretrain = False\n",
+    "pretrain = True\n",
     "\n",
     "if pretrain:\n",
-    "    learn_rates = [0.001]#, 0.0001, 0.00001, 0.000001]\n",
-    "    epochs_list = [1]#, 1, 1, 1]\n",
+    "    learn_rates = [0.001, 0.0001, 0.00001, 0.000001]\n",
+    "    epochs_list = [10, 5, 1, 1]\n",
     "    train_losses, val_losses = [], []\n",
     "\n",
     "    for lr, epochs in zip(learn_rates, epochs_list):\n",
@@ -145,11 +159,11 @@
     "        train_losses += tmp_train_losses\n",
     "        val_losses += tmp_val_losses\n",
     "        \n",
-    "    learn_rates = [0.001]#, 0.0001, 0.00001, 0.000001]\n",
-    "    epochs_list = [1]#, 1, 1, 1]\n",
+    "    learn_rates = [0.0001, 0.00001, 0.000001]\n",
+    "    epochs_list = [50, 20, 10]\n",
     "\n",
     "    for lr, epochs in zip(learn_rates, epochs_list):\n",
-    "        tmp_train_losses, tmp_val_losses, fbeta_score, thresholds = model.fit(flow, epochs, lr, validation_generator,y_valid, resnet_layers_trainable=15,  train_callbacks=[checkpoint], batches=batches)\n",
+    "        tmp_train_losses, tmp_val_losses, fbeta_score, thresholds = model.fit(flow, epochs, lr, validation_generator,y_valid, resnet_layers_trainable=5,  train_callbacks=[checkpoint], batches=batches)\n",
     "        print(\"fbeta = {}\".format(fbeta_score))\n",
     "        train_losses += tmp_train_losses\n",
     "        val_losses += tmp_val_losses"
@@ -157,46 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Weights loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.load_weights(\"resnet_weights.best.hdf5\")\n",
     "print(\"Weights loaded\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "resnet"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_losses' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-8be357f096cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Training loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_losses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Validation loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_losses' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(train_losses, label='Training loss')\n",
     "plt.plot(val_losses, label='Validation loss')\n",
@@ -221,13 +208,13 @@
     "del X_train, y_train\n",
     "gc.collect()\n",
     "\n",
-    "x_test, x_test_filename = get_test_matrices(\"/Users/westside/dev/python/planet-amazon-deforestation/input/test-jpg\", img_size)\n",
+    "x_test, x_test_filename = get_test_matrices(\"../data/test-jpg\", img_size)\n",
     "predictions = model.predict(x_test)\n",
     "\n",
     "del x_test\n",
     "gc.collect()\n",
     "\n",
-    "x_test, x_test_filename_additional = get_test_matrices(\"/Users/westside/dev/python/planet-amazon-deforestation/input/test-jpg-additional\", img_size)\n",
+    "x_test, x_test_filename_additional = get_test_matrices(\"../data/test-jpg-additional\", img_size)\n",
     "new_predictions = model.predict(x_test)\n",
     "\n",
     "del x_test\n",
@@ -285,9 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "final_df = pd.DataFrame(final_data, columns=['image_name', 'tags'])\n",
@@ -297,9 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tags_s = pd.Series(list(chain.from_iterable(predicted_labels))).value_counts()\n",
@@ -332,7 +315,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -346,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
