--- a/ResNet50.ipynb
+++ b/ResNet50.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "/home/westside/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/usr/local/lib/python3.4/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -19,7 +19,7 @@
     "from keras.applications.resnet50 import ResNet50\n",
     "from keras.layers import Dense, GlobalAveragePooling2D, Dropout, BatchNormalization\n",
     "from keras.models import Model\n",
-    "from keras.optimizers import Adam\n",
+    "from keras.optimizers import Adam, \n",
     "from keras_resnet import ResnetModel\n",
     "from data_helper import ImageGenerator, get_train_matrices, get_test_matrices, ValidGenerator\n",
     "from sklearn.cross_validation import train_test_split\n",
@@ -48,9 +48,9 @@
     "img_size = (224, 224)\n",
     "img_channels = 3\n",
     "output_size = 17\n",
-    "batch_size = 8\n",
+    "batch_size = 128\n",
     "validation_batch = 128\n",
-    "batches = 500 * 128 // batch_size"
+    "batches = 300 * 128 // batch_size"
    ]
   },
   {
@@ -62,19 +62,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPython 3.6.1\n",
-      "IPython 5.3.0\n",
+      "CPython 3.4.3\n",
+      "IPython 6.1.0\n",
       "\n",
-      "keras 2.0.5\n",
+      "keras 2.0.4\n",
       "\n",
-      "compiler   : GCC 4.4.7 20120313 (Red Hat 4.4.7-1)\n",
+      "compiler   : GCC 4.8.4\n",
       "system     : Linux\n",
-      "release    : 4.8.0-56-generic\n",
+      "release    : 4.4.0-31-generic\n",
       "machine    : x86_64\n",
       "processor  : x86_64\n",
-      "CPU cores  : 12\n",
+      "CPU cores  : 8\n",
       "interpreter: 64bit\n",
-      "Git hash   : dc902551cc50fe56b503db12c047e0308a3ead94\n"
+      "Git hash   : ea2c2c43e02e863035d48f082fc5410957408878\n"
      ]
     }
    ],
@@ -91,8 +91,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40479/40479 [02:21<00:00, 286.08it/s]\n"
+      "100%|██████████| 40479/40479 [02:41<00:00, 251.27it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,7 +113,8 @@
     "validation_steps = len(y_valid) // validation_batch\n",
     "y_valid = y_valid[:validation_steps * validation_batch]\n",
     "X_valid = X_valid[:validation_steps * validation_batch]\n",
-    "validation_generator = ValidGenerator().get_valid_generator(X_valid, y_valid, batch_size=validation_batch)"
+    "validation_generator = ValidGenerator().get_valid_generator(X_valid, y_valid, batch_size=validation_batch)\n",
+    "gc.collect()"
    ]
   },
   {
@@ -129,9 +140,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/westside/projects/amazon/my_custom/keras_resnet.py:41: UserWarning: Update your `Model` call to the Keras 2 API: `Model(inputs=Tensor(\"in..., outputs=Tensor(\"de...)`\n",
+      "/home/paperspace/amazon-planet/keras_resnet.py:41: UserWarning: Update your `Model` call to the Keras 2 API: `Model(outputs=Tensor(\"de..., inputs=Tensor(\"in...)`\n",
       "  self.model = Model(input=self.resnet.input, output=predictions)\n",
-      "/home/westside/projects/amazon/my_custom/keras_resnet.py:59: UserWarning: Update your `fit_generator` call to the Keras 2 API: `fit_generator(<keras.pre..., steps_per_epoch=8000, callbacks=[<keras_re..., validation_data=<keras.pre..., validation_steps=63, epochs=10)`\n",
+      "/home/paperspace/amazon-planet/keras_resnet.py:59: UserWarning: Update your `fit_generator` call to the Keras 2 API: `fit_generator(<keras.pre..., callbacks=[<keras_re..., steps_per_epoch=300, validation_data=<keras.pre..., epochs=10, validation_steps=63)`\n",
       "  validation_data=validation_data, validation_steps=validation_steps)\n"
      ]
     },
@@ -140,7 +151,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "2181/8000 [=======>......................] - ETA: 340s - loss: 0.2016 - acc: 0.9244"
+      "299/300 [============================>.] - ETA: 1s - loss: 0.1704 - acc: 0.9357Epoch 00000: val_acc improved from -inf to 0.80722, saving model to resnet_weights.best.hdf5\n",
+      "300/300 [==============================] - 491s - loss: 0.1703 - acc: 0.9358 - val_loss: 0.4219 - val_acc: 0.8072\n",
+      "Epoch 2/10\n",
+      "299/300 [============================>.] - ETA: 1s - loss: 0.1446 - acc: 0.9450Epoch 00001: val_acc improved from 0.80722 to 0.82331, saving model to resnet_weights.best.hdf5\n",
+      "300/300 [==============================] - 484s - loss: 0.1446 - acc: 0.9450 - val_loss: 0.4052 - val_acc: 0.8233\n",
+      "Epoch 3/10\n",
+      "299/300 [============================>.] - ETA: 1s - loss: 0.1366 - acc: 0.9481"
      ]
     }
    ],
@@ -172,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.load_weights(\"resnet_weights.best.hdf5\")\n",
@@ -182,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(train_losses, label='Training loss')\n",
@@ -193,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fbeta_score"
@@ -202,7 +225,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "del X_train, y_train\n",
@@ -230,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fb_score, thresholds = model.get_fbeta_score(validation_generator, y_valid, validation_steps)\n",
@@ -272,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "final_df = pd.DataFrame(final_data, columns=['image_name', 'tags'])\n",
@@ -282,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tags_s = pd.Series(list(chain.from_iterable(predicted_labels))).value_counts()\n",
@@ -329,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
